Final Commit all

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1,80 +1,83 @@
 {
-  "About Us": "关于我们",
-  "Advisors": "顾问团队",
-  "All star team with experts in blockchain & technology & finance and marketing.": "全明星团队拥有区块链，技术，法律，金融和市场方面的专家",
-  "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "以德是支持ERC20代币和智能合约的开放式多方交易平台",
-  "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "作为一个去中心化的交易平台， 以德无需中心化交易和传统的资产管理方法.",
-  "It is a decentralized trading platform that does not involve any centralize": "以德将重新定义下一代资产交易全新业界标准.在过去90天内，以德完成了$3.4亿美金的成交量，返回了$1.1百万美金的净利润，过去30天内完成了$1.22亿美金的交易量，返回了$0.38百万美元的净利润",
-  "Bitcoin Transaction": "比特币交易",
-  "Currencies Accepted": "接受币种",
-  "DECENTRALIZED EXCHANGE": "以德去中心化交易所",
-  "Decentralization": "去中心化",
-  "Development new generation exchange multiple of platform including IOS and Android": "开发新一代IOS和Android手机版交易所",
-  "Distributed transactions, globally none geographic restrictions": "分布式交易，全球无地域限制",
-  "Diversity": "多样性",
-  "Emergency Fund (15%)": "应急基金 (15%)",
-  "EtherDelta 2": {
-    "0": "以德 2.0"
-  },
-  "EtherDelta Lab 51": "以德实验室 51",
-  "EtherDelta exchange will support bitcoin transaction and related service": "以徳交换将支持比特币交易和相关服务",
-  "EtherDelta will launch Lab 51 to incubate new innovation in finance, technology and security": "以徳将启动实验室51，孵化在金融，科技，安全等领域的创新",
-  "High degree of transparency, fairness, integrity": "高度透明，公平，诚信",
-  "High number of coin selections": "币种选择多样",
-  "Home": "主页",
-  "Impartial": "公正",
-  "Increase the value of the wallet": "全新以德钱包上线",
-  "Language": "语言 ",
-  "Low credit and operational costs": "无需信用等级验证, 低运营成本",
-  "Marketing & Promotion (50%)": "营销与推广（50％)",
-  "Mobile Platform": "手机平台",
-  "Mobile app user interface(UI) enhancement": "新版手机平台应用和网络版升级",
-  "Multiple layer to secure the transaction": "多层交易保证",
-  "New Wallet": "新钱包",
-  "New decentralized TGE platform released": "新的分散式TGE平台发布",
-  "Next Generation wallet with coin exchange feature": "下一代嵌入式多币种兑换功能钱包",
-  "No registration and no complicated KYC process": "无需注册，无复杂用户验证程序",
-  "Partners": "合作伙伴",
-  "Rate": "比例",
-  "Schedule": "里程碑",
-  "Secure": "安全",
-  "Strong advisor team in blockchain world": "资深顾问团队",
-  "System Development & Operation (35%)": "系统开发与运营（35％)",
-  "Team": "团队",
-  "Team & Talent expanding": "团队和人才拓展",
-  "Token Distribution": "代币分配",
-  "Token Generation Event Start In": "代币销售倒计时",
-  "Token Sale": "代币销售",
-  "Token Sale Hard Cap": "代币销售硬顶",
-  "Total Supply of Tokens": "代币总供应量",
-  "Trust": "信任",
-  "Unlock KYC": "解锁KYC",
-  "Use of Process": "使用分配",
-  "Visit Exchange": "访问交易所",
-  "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
-    "0": "我们把以德定位为下一代数字资产交换为的行业标准"
-  },
-  "Whitepaper": "白皮书下载",
-  "150,000,000 Team Reserved 1 year (10%)": "150,000,000 团队预留一年 （10%）",
-  "600,000,000 Private-Sale (40%)": "600,000,000 私募（40%）",
-  "750,000,000 Token Generation Event (50%)": "750,000,000 令牌销售 （50%）",
-  "Founder of Wenyue Capital": "文悦资本创始人",
-  "Co-founder of Oceanrise trading group": "Oceanrise交易集团联合创始人",
-  "Professional knowledge of computer science and blockchain investment, entrepreneurs in international trade, investment, consulting, PR and other backgrounds.": "专业计算机科学，区块链投资背景, 拥有国际贸易，投资，咨询，人力资源等方面企业管理经验.",
-  "MMU economics": "MMU economics",
-  "Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.": "曾就职于英国CMC外贸交易中心. 区块链科技资深背景.",
-  "Director of River stone capital project": "River stone capital主任",
-  "Experience in the finance industry, years of experience in customer development and investment maintenance and financial management.": "丰富的金融业经历, 多年帮助客户开发管理资产投资.",
-  "Director of golden bull finance": "Director of golden bull finance",
-  "Founder of WWW.ICO.COM": "WWW.ICO.COM创始人",
-  "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)": "区块链金融服务(BFS)创始人",
-  "Founder of Zenith Ventures blockchain": "Zenith Ventures创始人",
-  "Founder & CEO of 1ST Blood": "一血创始人兼CEO",
-  "Advisor of Lampix": "Lampix顾问",
-  "Partner of NewBlock Capital": "NewBlock Capital合伙人",
-  "Chief marketing advisor": "首席市场顾问",
-  "Chief marketing advisor": "首席项目顾问",
-  "Token Generation Event Ends In": "加入令牌销售倒计时",
-  "Join Token Sale": "加入令牌销售",
-  "Director of golden bull finance": "金牛财经主任"
+    "About Us": "关于我们",
+    "Advisors": "顾问团队",
+    "All star team with experts in blockchain & technology & finance and marketing.": "全明星团队拥有区块链，技术，法律，金融和市场方面的专家",
+    "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "以德是支持ERC20代币和智能合约的开放式多方交易平台",
+    "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "作为一个去中心化的交易平台， 以德无需中心化交易和传统的资产管理方法.",
+    "It is a decentralized trading platform that does not involve any centralize": "以德将重新定义下一代资产交易全新业界标准.在过去90天内，以德完成了$3.4亿美金的成交量，返回了$1.1百万美金的净利润，过去30天内完成了$1.22亿美金的交易量，返回了$0.38百万美元的净利润",
+    "Bitcoin Transaction": "比特币交易",
+    "Currencies Accepted": "接受币种",
+    "DECENTRALIZED EXCHANGE": "以德去中心化交易所",
+    "Decentralization": "去中心化",
+    "Development new generation exchange multiple of platform including IOS and Android": "开发新一代IOS和Android手机版交易所",
+    "Distributed transactions, globally none geographic restrictions": "分布式交易，全球无地域限制",
+    "Diversity": "多样性",
+    "Emergency Fund (15%)": "应急基金 (15%)",
+    "EtherDelta 2": {
+        "0": "以德 2.0"
+    },
+    "EtherDelta Lab 51": "以德实验室 51",
+    "EtherDelta exchange will support bitcoin transaction and related service": "以徳交换将支持比特币交易和相关服务",
+    "EtherDelta will launch Lab 51 to incubate new innovation in finance, technology and security": "以徳将启动实验室51，孵化在金融，科技，安全等领域的创新",
+    "High degree of transparency, fairness, integrity": "高度透明，公平，诚信",
+    "High number of coin selections": "币种选择多样",
+    "Home": "主页",
+    "Impartial": "公正",
+    "Increase the value of the wallet": "全新以德钱包上线",
+    "Language": "Language",
+    "Low credit and operational costs": "无需信用等级验证, 低运营成本",
+    "Marketing & Promotion (50%)": "营销与推广（50％)",
+    "Mobile Platform": "手机平台",
+    "Mobile app user interface(UI) enhancement": "新版手机平台应用和网络版升级",
+    "Multiple layer to secure the transaction": "多层交易保证",
+    "New Wallet": "新钱包",
+    "New decentralized TGE platform released": "新的分散式TGE平台发布",
+    "Next Generation wallet with coin exchange feature": "下一代嵌入式多币种兑换功能钱包",
+    "No registration and no complicated KYC process": "无需注册，无复杂用户验证程序",
+    "Partners": "合作伙伴",
+    "Rate": "比例",
+    "Schedule": "里程碑",
+    "Secure": "安全",
+    "Strong advisor team in blockchain world": "资深顾问团队",
+    "System Development & Operation (35%)": "系统开发与运营（35％)",
+    "Team": "团队",
+    "Team & Talent expanding": "团队和人才拓展",
+    "Token Distribution": "代币分配",
+    "Token Generation Event Start In": "代币销售倒计时",
+    "Token Sale": "代币销售",
+    "Token Sale Hard Cap": "代币销售硬顶",
+    "Total Supply of Tokens": "代币总供应量",
+    "Trust": "信任",
+    "Unlock KYC": "解锁KYC",
+    "Use of Process": "使用分配",
+    "Visit Exchange": "访问交易所",
+    "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
+        "0": "我们把以德定位为下一代数字资产交换为的行业标准"
+    },
+    "Whitepaper": "白皮书下载",
+    "150,000,000 Team Reserved 1 year (10%)": "150,000,000 团队预留一年 （10%）",
+    "600,000,000 Private-Sale (40%)": "600,000,000 私募（40%）",
+    "750,000,000 Token Generation Event (50%)": "750,000,000 令牌销售 （50%）",
+    "Founder of Wenyue Capital": "文悦资本创始人",
+    "Co-founder of Oceanrise trading group": "Oceanrise交易集团联合创始人",
+    "Professional knowledge of computer science and blockchain investment, entrepreneurs in international trade, investment, consulting, PR and other backgrounds.": "专业计算机科学，区块链投资背景, 拥有国际贸易，投资，咨询，人力资源等方面企业管理经验.",
+    "MMU economics": "MMU economics",
+    "Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.": "曾就职于英国CMC外贸交易中心. 区块链科技资深背景.",
+    "Director of River stone capital project": "River stone capital主任",
+    "Experience in the finance industry, years of experience in customer development and investment maintenance and financial management.": "丰富的金融业经历, 多年帮助客户开发管理资产投资.",
+
+    "Founder of WWW.ICO.COM": "WWW.ICO.COM创始人",
+    "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)": "区块链金融服务(BFS)创始人",
+    "Founder of Zenith Ventures blockchain": "Zenith Ventures创始人",
+    "Founder & CEO of 1ST Blood": "一血创始人兼CEO",
+    "Advisor of Lampix": "Lampix顾问",
+    "Partner of NewBlock Capital": "NewBlock Capital合伙人",
+    "Chief marketing advisor": "首席市场顾问",
+
+    "Token Generation Event Ends In": "加入令牌销售倒计时",
+    "Join Token Sale": "加入令牌销售",
+    "Director of golden bull finance": "金牛财经主任",
+    "Thank you for your commitment!": "非常感谢您的支持与参与！",
+    "TGE IS CLOSED NOW.": "令牌生成发售已经结束.",
+    "(All unsold EDT tokens will be burned)": "（所有未售令牌将会被注销）"
 }
